--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,9 +53,9 @@ body {
   color: var(--color-foreground);
 }
 
-a {
+/* a {
   color: white;
-}
+} */
 
 header a.active {
   background-color: hsla(0, 0%, 100%, 0.25);
@@ -93,16 +93,11 @@ article img {
 
 /* .page-title */
 h1 {
-  font-size: clamp(2rem, 6vw + 1rem, 8rem);
+  font-size: clamp(2rem, 6vw + 1rem, 6.25rem);
   margin-bottom: 16px;
   font-weight: 700;
   line-height: 112.5%;
   letter-spacing: -0.0375em;
-}
-
-.hero h1 {
-  /* text-indent: 16vw; */
-  line-height: 100%;
 }
 
 hr {
@@ -427,32 +422,24 @@ body.dark {
 } */
 
 body {
-  background-color: #ffffff;
-  color: #000000;
+  /* background-color: #ffffff; */
+  /* color: #000000; */
   transition:
     background-color 0.5s ease,
     color 0.25s ease;
 }
 
 /* Dark mode based on system preference */
-@media (prefers-color-scheme: dark) {
-  body {
-    background-color: #000000;
-    color: #ffffff;
-  }
-}
 
 /* Manual light and dark modes */
 body.light {
-  background-color: #ffffff;
-  color: #000000;
+  --color-foreground: black;
+  --color-background: white;
 }
 
 body.dark {
-  background-color: #000000;
-  color: #ffffff;
-  --color-foreground: blue;
-  --color-background: red;
+  --color-foreground: white;
+  --color-background: #12121a;
 }
 
 /* Add basic styles for the icons */
@@ -461,6 +448,7 @@ body.dark {
   border: none;
   cursor: pointer;
   font-size: 1.5rem;
+  color: var(--color-foreground);
 }
 
 #theme-toggle i {
