--- a/themes/blank/assets/style.css
+++ b/themes/blank/assets/style.css
@@ -3,465 +3,491 @@
 /* @tailwind components; */
 
 .pointer-events-none {
-  pointer-events: none
+  pointer-events: none;
 }
 
 .fixed {
-  position: fixed
+  position: fixed;
 }
 
 .absolute {
-  position: absolute
+  position: absolute;
 }
 
 .relative {
-  position: relative
+  position: relative;
 }
 
 .bottom-0 {
-  bottom: 0px
+  bottom: 0px;
 }
 
 .bottom-24 {
-  bottom: 6rem
+  bottom: 6rem;
 }
 
 .bottom-4 {
-  bottom: 1rem
+  bottom: 1rem;
 }
 
 .left-0 {
-  left: 0px
+  left: 0px;
 }
 
 .left-4 {
-  left: 1rem
+  left: 1rem;
 }
 
 .right-0 {
-  right: 0px
+  right: 0px;
 }
 
 .top-0 {
-  top: 0px
+  top: 0px;
 }
 
 .z-50 {
-  z-index: 50
+  z-index: 50;
 }
 
 .mx-auto {
   margin-left: auto;
-  margin-right: auto
+  margin-right: auto;
 }
 
 .mb-1 {
-  margin-bottom: 0.25rem
+  margin-bottom: 0.25rem;
 }
 
 .mb-2 {
-  margin-bottom: 0.5rem
+  margin-bottom: 0.5rem;
 }
 
 .mb-24 {
-  margin-bottom: 6rem
+  margin-bottom: 6rem;
 }
 
 .mb-3 {
-  margin-bottom: 0.75rem
+  margin-bottom: 0.75rem;
 }
 
 .mb-4 {
-  margin-bottom: 1rem
+  margin-bottom: 1rem;
 }
 
 .mb-6 {
-  margin-bottom: 1.5rem
+  margin-bottom: 1.5rem;
 }
 
 .mb-8 {
-  margin-bottom: 2rem
+  margin-bottom: 2rem;
 }
 
 .mt-16 {
-  margin-top: 4rem
+  margin-top: 4rem;
 }
 
 .mt-2 {
-  margin-top: 0.5rem
+  margin-top: 0.5rem;
 }
 
 .mt-3 {
-  margin-top: 0.75rem
+  margin-top: 0.75rem;
 }
 
 .mt-32 {
-  margin-top: 8rem
+  margin-top: 8rem;
 }
 
 .mt-auto {
-  margin-top: auto
+  margin-top: auto;
 }
 
 .block {
-  display: block
+  display: block;
 }
 
 .inline {
-  display: inline
+  display: inline;
 }
 
 .flex {
-  display: flex
+  display: flex;
 }
 
 .grid {
-  display: grid
+  display: grid;
 }
 
 .h-16 {
-  height: 4rem
+  height: 4rem;
 }
 
 .h-\[340px\] {
-  height: 340px
+  height: 340px;
 }
 
 .h-\[64vh\] {
-  height: 64vh
+  height: 64vh;
 }
 
 .h-full {
-  height: 100%
+  height: 100%;
 }
 
 .w-64 {
-  width: 16rem
+  width: 16rem;
 }
 
 .w-9 {
-  width: 2.25rem
+  width: 2.25rem;
 }
 
 .w-full {
-  width: 100%
+  width: 100%;
 }
 
 .min-w-9 {
-  min-width: 2.25rem
+  min-width: 2.25rem;
 }
 
 .max-w-4xl {
-  max-width: 56rem
+  max-width: 56rem;
 }
 
 .max-w-\[--content-width\] {
-  max-width: var(--content-width)
+  max-width: var(--content-width);
 }
 
 .max-w-\[var\(--content-width\)\] {
-  max-width: var(--content-width)
+  max-width: var(--content-width);
 }
 
 .max-w-screen-xl {
-  max-width: 1280px
+  max-width: 1280px;
 }
 
 .max-w-xl {
-  max-width: 36rem
+  max-width: 36rem;
 }
 
 .flex-1 {
-  flex: 1 1 0%
+  flex: 1 1 0%;
 }
 
 .grid-cols-1 {
-  grid-template-columns: repeat(1, minmax(0, 1fr))
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .flex-row {
-  flex-direction: row
+  flex-direction: row;
 }
 
 .flex-col {
-  flex-direction: column
+  flex-direction: column;
 }
 
 .content-center {
-  align-content: center
+  align-content: center;
 }
 
 .items-center {
-  align-items: center
+  align-items: center;
 }
 
 .justify-center {
-  justify-content: center
+  justify-content: center;
 }
 
 .justify-between {
-  justify-content: space-between
+  justify-content: space-between;
 }
 
 .gap-1 {
-  gap: 0.25rem
+  gap: 0.25rem;
 }
 
 .gap-2 {
-  gap: 0.5rem
+  gap: 0.5rem;
 }
 
 .gap-3 {
-  gap: 0.75rem
+  gap: 0.75rem;
 }
 
 .gap-4 {
-  gap: 1rem
+  gap: 1rem;
 }
 
 .overflow-hidden {
-  overflow: hidden
+  overflow: hidden;
 }
 
 .rounded-full {
-  border-radius: 9999px
+  border-radius: 9999px;
 }
 
 .rounded-lg {
-  border-radius: 0.5rem
+  border-radius: 0.5rem;
 }
 
 .rounded-md {
-  border-radius: 0.375rem
+  border-radius: 0.375rem;
 }
 
 .border {
-  border-width: 1px
+  border-width: 1px;
 }
 
 .border-b {
-  border-bottom-width: 1px
+  border-bottom-width: 1px;
 }
 
 .border-l {
-  border-left-width: 1px
+  border-left-width: 1px;
 }
 
 .border-r {
-  border-right-width: 1px
+  border-right-width: 1px;
 }
 
 .border-t {
-  border-top-width: 1px
+  border-top-width: 1px;
 }
 
 .border-\[var\(--color-border-light\)\] {
-  border-color: var(--color-border-light)
+  border-color: var(--color-border-light);
 }
 
 .border-black\/5 {
-  border-color: rgb(0 0 0 / 0.05)
+  border-color: rgb(0 0 0 / 0.05);
 }
 
 .border-white {
   --tw-border-opacity: 1;
-  border-color: rgb(255 255 255 / var(--tw-border-opacity))
+  border-color: rgb(255 255 255 / var(--tw-border-opacity));
 }
 
 .bg-gray-800 {
   --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity))
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-t {
-  background-image: linear-gradient(to top, var(--tw-gradient-stops))
+  background-image: linear-gradient(to top, var(--tw-gradient-stops));
 }
 
 .from-\[var\(--color-background\)\] {
   --tw-gradient-from: var(--color-background) var(--tw-gradient-from-position);
   --tw-gradient-to: rgb(255 255 255 / 0) var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to)
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
 .to-transparent {
-  --tw-gradient-to: transparent var(--tw-gradient-to-position)
+  --tw-gradient-to: transparent var(--tw-gradient-to-position);
 }
 
 .object-cover {
   -o-object-fit: cover;
-     object-fit: cover
+  object-fit: cover;
 }
 
 .p-2 {
-  padding: 0.5rem
+  padding: 0.5rem;
 }
 
 .p-32 {
-  padding: 8rem
+  padding: 8rem;
 }
 
 .p-4 {
-  padding: 1rem
+  padding: 1rem;
 }
 
 .p-6 {
-  padding: 1.5rem
+  padding: 1.5rem;
 }
 
 .p-\[6vw\] {
-  padding: 6vw
+  padding: 6vw;
 }
 
 .p-\[8vw\] {
-  padding: 8vw
+  padding: 8vw;
 }
 
 .px-4 {
   padding-left: 1rem;
-  padding-right: 1rem
+  padding-right: 1rem;
 }
 
 .px-40 {
   padding-left: 10rem;
-  padding-right: 10rem
+  padding-right: 10rem;
 }
 
 .px-\[6vw\] {
   padding-left: 6vw;
-  padding-right: 6vw
+  padding-right: 6vw;
 }
 
 .px-\[8vw\] {
   padding-left: 8vw;
-  padding-right: 8vw
+  padding-right: 8vw;
 }
 
 .py-2 {
   padding-top: 0.5rem;
-  padding-bottom: 0.5rem
+  padding-bottom: 0.5rem;
 }
 
 .pb-\[2vw\] {
-  padding-bottom: 2vw
+  padding-bottom: 2vw;
 }
 
 .pt-\[6vw\] {
-  padding-top: 6vw
+  padding-top: 6vw;
 }
 
 .pt-\[8vw\] {
-  padding-top: 8vw
+  padding-top: 8vw;
 }
 
 .text-5xl {
   font-size: 3rem;
-  line-height: 1
+  line-height: 1;
 }
 
 .text-\[80\%\] {
-  font-size: 80%
+  font-size: 80%;
 }
 
 .text-\[90\%\] {
-  font-size: 90%
+  font-size: 90%;
 }
 
 .text-base {
   font-size: 1rem;
-  line-height: 1.5rem
+  line-height: 1.5rem;
 }
 
 .text-lg {
   font-size: 1.125rem;
-  line-height: 1.75rem
+  line-height: 1.75rem;
 }
 
 .text-xl {
   font-size: 1.25rem;
-  line-height: 1.75rem
+  line-height: 1.75rem;
 }
 
 .font-\[600\] {
-  font-weight: 600
+  font-weight: 600;
 }
 
 .font-semibold {
-  font-weight: 600
+  font-weight: 600;
 }
 
 .tracking-tight {
-  letter-spacing: -0.025em
+  letter-spacing: -0.025em;
 }
 
 .text-gray-500 {
   --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity))
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .text-gray-700 {
   --tw-text-opacity: 1;
-  color: rgb(55 65 81 / var(--tw-text-opacity))
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .opacity-15 {
-  opacity: 0.15
+  opacity: 0.15;
 }
 
 .opacity-40 {
-  opacity: 0.4
+  opacity: 0.4;
 }
 
 .opacity-45 {
-  opacity: 0.45
+  opacity: 0.45;
 }
 
 .opacity-50 {
-  opacity: 0.5
+  opacity: 0.5;
 }
 
 .transition {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-property:
+    color,
+    background-color,
+    border-color,
+    text-decoration-color,
+    fill,
+    stroke,
+    opacity,
+    box-shadow,
+    transform,
+    filter,
+    -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color,
+    text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter,
+    backdrop-filter;
+  transition-property:
+    color,
+    background-color,
+    border-color,
+    text-decoration-color,
+    fill,
+    stroke,
+    opacity,
+    box-shadow,
+    transform,
+    filter,
+    backdrop-filter,
+    -webkit-backdrop-filter;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms
+  transition-duration: 150ms;
 }
 
 .transition-colors {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-property: color, background-color, border-color,
+    text-decoration-color, fill, stroke;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms
+  transition-duration: 150ms;
 }
 
 .duration-200 {
-  transition-duration: 200ms
+  transition-duration: 200ms;
 }
 
 .ease-in-out {
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hover\:bg-gray-100\/50:hover {
-  background-color: rgb(243 244 246 / 0.5)
+  background-color: rgb(243 244 246 / 0.5);
 }
 
 .group:hover .group-hover\:underline {
-  text-decoration-line: underline
+  text-decoration-line: underline;
 }
 
 @media (min-width: 768px) {
   .md\:grid {
-    display: grid
+    display: grid;
   }
 
   .md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr))
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 
 @media (prefers-color-scheme: dark) {
   .dark\:text-gray-300 {
     --tw-text-opacity: 1;
-    color: rgb(209 213 219 / var(--tw-text-opacity))
+    color: rgb(209 213 219 / var(--tw-text-opacity));
   }
 }
