--- a/themes/blank/static/css/style.css
+++ b/themes/blank/static/css/style.css
@@ -52,6 +52,10 @@ h6 {
   isolation: isolate;
 }
 
+a {
+  text-decoration: none;
+}
+
 body {
   margin: 0 auto;
   font-family: var(--font-family-sans);
