--- a/themes/blank/static/css/style.css
+++ b/themes/blank/static/css/style.css
@@ -1,13 +1,102 @@
 @import url("type.css");
 @import url("variables.css");
 
+/* Comprehensive CSS Reset */
 *,
 ::after,
 ::before {
   box-sizing: border-box;
 }
+
 * {
   margin: 0;
+  padding: 0;
+}
+
+/* Reset all default margins and paddings */
+html,
+body,
+div,
+span,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
 body {
   line-height: 1.5;
@@ -67,6 +156,38 @@ a:any-link {
   text-decoration: none !important;
 }
 
+/* Additional resets for common browser defaults */
+ul,
+ol {
+  list-style: none;
+}
+
+button {
+  background: none;
+  border: none;
+  cursor: pointer;
+}
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* Remove default focus outlines */
+*:focus {
+  outline: none;
+}
+
+/* Reset form elements */
+input,
+textarea,
+select,
+button {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
+
 body {
   margin: 0 auto;
   font-family: var(--font-family-sans);
@@ -115,6 +236,7 @@ main,
 
 .page-title {
   font-size: clamp(1.5rem, 4vw + 1.25rem, 10rem);
+  font-weight: 400;
 }
 
 .hero a {
